# NakodilAPI

./: .env-test  .env_example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json
src/: Dockerfile  config.py  db.py  di.py  docker-compose.yml  exceptions.py  external_apis.md  ioc.py  main.py  utils.py
src/api/: __init__.py  app.py  dependencies.py  events.py  exception_handler.py  lifespan.py  organizers.py  reports.py  routes.py  seats.py  system.py
src/api/routes/: events.py  organizers.py  reports.py  routes_other.py  seats.py
src/infrastructure/api_connectors/: base.py
src/infrastructure/api_connectors/internal/: payment.py  protection.py
src/infrastructure/postgres/: db.py  db_manager.py
src/infrastructure/postgres/models/: models.py
src/infrustructure/api_connectors/: schemas.py
src/migrations/: env.py
src/migrations/versions/: 0001_create_tables.py
src/mock_apis/payment/: Dockerfile  main.py  pyproject.toml
src/mock_apis/protection/: Dockerfile  main.py  pyproject.toml
src/models/: models.py
src/repositories/: base.py  bookings.py  events.py  organizers.py  seats.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: bookings.py  events.py  reports.py  schemas.py  seats.py
src/services/: add_event_data.py  base.py  events.py  legacy_client.py  organizers.py  reports.py  seats.py
src/utils/: db_manager.py  fastapi_warnings.py
tests/: conftest.py
tests/integration_tests/reports/: test_api.py
tests/unit_tests/: test_reports.py
(+9 files in other folders)
