[project]
name = "fastapi-background-processing-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.20",
    "uvicorn>=0.51.0",
]
